@@ -1,1 +1,2 @@
 - Fixed the Post Creation step creating duplicate posts when the workflow or step is restarted.
+- Fixed back link display on entry detail page to use css with class gravityflow-back-link-container instead of line breaks for spacing.
